--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
+
+
+@layer base {
+    body {
+        @apply font-[Raleway];
+        @apply bg-[url('./Assets/bg.png')] ;
+        @apply bg-cover;
+    }
+    li{
+        @apply px-4;
+        @apply cursor-pointer;
+        
+    }
+    li:hover{
+        @apply border-b-8;
+        @apply border-gray-600;
+        @apply text-white;
+        @apply duration-500;
+        @apply bg-black;
+    }
 }
